Changed file request ID to string type, updated openapi
